<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout

        android:id="@+id/linearLayout"

        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/Restore"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/re_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rest_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/introduce_tu_usuario"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nueva_contraseña"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/introduce_tu_nueva_contraseña"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:gravity="center"

            android:orientation="horizontal">

            <Button
                android:id="@+id/restorebtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:backgroundTint="#bfbf73"
                android:text="@string/restaurar"
                android:textAllCaps="false"
                android:textColor="#2A2929"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>