...
    <string name="suggestions_header">Cajón de sugerencias</string>
    <string name="suggestions_title">Sugerencia</string>
    <string name="send_suggestion_title">Enviar sugerencia</string>
    <string name="reset_suggestion_title">Resetear sugerencia</string>
    <string name="edit_suggestion_title">Escribir sugerencia</string>
    <string name="crear_receta_button">Crear Receta</string>
    <string name="recuperar">Recuperar</string>
    <string name="recuperar_password">Recuperar contraseña</string>
    <string name="introduce_tu_contraseña">Introduce tu Contraseña</string>
    <string name="pwd_txt">Contraseña</string>
    <string name="introduce_tu_usuario">Introduce tu Usuario</string>
    <string name="user_txt">Usuario</string>
    <string name="login">Inicia Sesión</string>
    <string name="titulo">La Nevera de \nGePeTo</string>
    <string name="register">Registrarse</string>
    <string name="nueva_contraseña">Nueva Contraseña</string>
    <string name="introduce_tu_nueva_contraseña">Introduce tu nueva Contraseña</string>
    <string name="restaurar">Restaurar</string>
    <string name="Restore">Recuperar Contraseña</string>
    <string name="no_hay_recetas">No existen Recetas</string>
    <string name="no_hay_favortias">No existen Favoritos</string>
    <string name="buscar_receta">Buscar receta:</string>
    <string name="buscar_favorita">Buscar favoritas:</string>
</resources>
