...
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center">

            <Button
                android:id="@+id/bt_restore"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#bfbf73"
                android:text="@string/recuperar"
                android:textAllCaps="false"
                android:textColor="#2A2929"
...
